<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anrikuwen.mydiary.settings.Settings">

    <TextView
        android:id="@+id/setting_login_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/setting_backgroud_selector"
        android:drawableRight="@mipmap/ic_enter_setting"
        android:gravity="center_vertical"
        android:padding="@dimen/padding"
        android:text="@string/login_text"
        android:textSize="@dimen/text_view_text_size_min" />

    <android.support.v7.widget.CardView
        android:id="@+id/setting_login_text_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/setting_login_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_text_setting"
                android:visibility="gone" />

            <Button
                android:id="@+id/setting_login_text_ensure_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ensure"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/setting_password_select_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/setting_backgroud_selector"
        android:drawableRight="@mipmap/ic_enter_setting"
        android:gravity="center_vertical"
        android:padding="@dimen/padding"
        android:text="@string/password_select"
        android:textSize="@dimen/text_view_text_size_min" />

    <android.support.v7.widget.CardView
        android:id="@+id/setting_password_select_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/setting_password_select_boot_password_CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/boot_password"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/setting_password_select_enter_diary_password_CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/enter_diary_password"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/setting_password_enter_setting_password_CB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/enter_setting_password"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
