<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/password_after_login_by_password_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_text_height"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/setting_backgroud_selector"
        android:drawableRight="@mipmap/ic_enter_setting"
        android:gravity="center_vertical"
        android:text="@string/by_password"
        android:textSize="@dimen/text_view_text_size_min" />

    <android.support.v7.widget.CardView
        android:id="@+id/password_after_login_by_password_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/password_after_login_by_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/input_password"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/password_after_login_by_password_ensure_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ensure" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/password_after_login_by_question_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_text_height"
        android:background="@drawable/setting_backgroud_selector"
        android:drawableRight="@mipmap/ic_enter_setting"
        android:gravity="center_vertical"
        android:text="@string/by_question"
        android:textSize="@dimen/text_view_text_size_min" />

    <android.support.v7.widget.CardView
        android:id="@+id/password_after_login_by_question_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:visibility="invisible"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/password_after_login_by_question_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_answer"
                android:visibility="invisible" />

            <Button
                android:id="@+id/password_after_login_by_question_ensure_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ensure"
                android:visibility="invisible" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
