<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/light_blue"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/left_nav_circle_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/margin_Forth_time"
        android:src="@drawable/left_nav_icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/left_nav_view_nickname_edit_image"
            android:layout_width="@dimen/image_dimen_min"
            android:layout_height="@dimen/image_dimen_min"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_toRightOf="@id/left_nav_circle_image"
            android:src="@mipmap/ic_edit" />

        <TextView
            android:id="@+id/left_nav_view_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_toRightOf="@id/left_nav_view_nickname_edit_image"
            android:text="@string/nick_name"
            android:textSize="@dimen/text_view_text_size_min" />

        <TextView
            android:id="@+id/left_nav_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top"
            android:layout_toRightOf="@id/left_nav_view_nickname"
            android:text="@string/my_nick_name"
            android:textSize="@dimen/text_view_text_size_min" />

        <ImageView
            android:id="@+id/left_nav_view_belief_edit_image"
            android:layout_width="@dimen/image_dimen_min"
            android:layout_height="@dimen/image_dimen_min"
            android:layout_marginTop="@dimen/text_view_margin_top_twice"
            android:layout_toRightOf="@id/left_nav_circle_image"
            android:src="@mipmap/ic_edit" />

        <TextView
            android:id="@+id/left_nav_view_belief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top_twice"
            android:layout_toRightOf="@id/left_nav_view_belief_edit_image"
            android:text="@string/belief"
            android:textSize="@dimen/text_view_text_size_min" />

        <TextView
            android:id="@+id/left_nav_view_your_belief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_view_margin_top_twice"
            android:layout_toRightOf="@id/left_nav_view_belief"
            android:text="@string/my_belief"
            android:textSize="@dimen/text_view_text_size_min" />

    </RelativeLayout>
</LinearLayout>