<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_diary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/diary_radio_group"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/padding_twice">

        <RadioButton
            android:id="@+id/diary_radio_button_0"
            style="@style/RadioButton"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="match_parent"
            android:background="@drawable/left_radio_button_selector"
            android:text="@string/project" />

        <RadioButton
            android:id="@+id/diary_radio_button_1"
            style="@style/RadioButton"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="match_parent"
            android:background="@drawable/middle_radio_button_selector"
            android:text="@string/calendar" />

        <RadioButton
            android:id="@+id/diary_radio_button_2"
            style="@style/RadioButton"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="match_parent"
            android:background="@drawable/right_radio_button_selector"
            android:text="@string/diary" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="Diary"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/text_view_text_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <android.support.v4.view.ViewPager
        android:id="@+id/diary_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
